force-app/packaged/main/default/objects/Provisioning_Request_Package__c/Provisioning_Request_Package__c.object-meta.xml
<CustomObject>
    <label>Provisioning Request Package</label>
    <nameField>
        <displayFormat>PRP-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Request Packages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>