force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Package Install Job Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>