force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <label>Namespace</label>
    <length>20</length>
    <type>Text</type>
</CustomField>