force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Ordinal__c.field-meta.xml
<CustomField>
    <fullName>Ordinal__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Ordinal</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>