force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Package_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Version_Id__c</fullName>
    <label>Package Version Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>