force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Provisioning_Request__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Request__c</fullName>
    <label>Provisioning Request</label>
    <referenceTo>Provisioning_Request__c</referenceTo>
    <relationshipLabel>Provisioning Request Packages</relationshipLabel>
    <relationshipName>Provisioning_Request_Packages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>