force-app/packaged/main/default/objects/Provisioning_Request_Package__c/fields/Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Change_Date__c</fullName>
    <label>Status Change Date</label>
    <type>DateTime</type>
</CustomField>